# bevy_ui_proxy

./: .gitignore  Cargo.toml  README.md
examples/bevy_ecs_tilemap_example/: Cargo.toml
examples/bevy_ecs_tilemap_example/src/: main.rs
examples/standard_example/: Cargo.toml
examples/standard_example/src/: main.rs
src/: error.rs  lib.rs  plugin.rs  prelude.rs  test.rs
src/component/: mod.rs  proxy_ui.rs  proxy_ui_node_state.rs  proxy_ui_proxied.rs  proxy_ui_target.rs
src/resource/: mod.rs  proxy_ui_entity_map.rs
src/system/: mod.rs  proxy_ui_added.rs  proxy_ui_update.rs
src/util/: ui.rs
