[package]
name = "bevy_ui_proxy"
version = "0.1.0"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    # TODO: these should probably use [[example]]
    "examples/*"
]

[dependencies]
bimap = "0.6"

[dependencies.bevy]
version = "0.13"
default-features = false
features = ["bevy_ui"]

[dependencies.bevy_reflect]
version = "0.13"
default-features = false
